--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,70 +1,66 @@
-name: Python Flask CI/CD
+name: Docker Build, Test, and Deploy
 
-# Define os eventos que disparam o workflow (push, pull_request, etc)
 on:
   push:
     branches: [main]
-  pull_request:
-    branches: [main]
 
-# Define as etapas do workflow
 jobs:
-
-  # Job de Build
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Build Docker image
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        push: false # Desabilita o push para o Docker Hub
-        tags: my-image:latest
+      - name: Build Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: false
+          tags: nome_da_sua_imagem:latest
 
-  # Job de Testes
   test:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Build Docker image
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        push: false # Desabilita o push para o Docker Hub
-        tags: my-image:latest
+      - name: Download Docker image
+        run: |
+          docker pull nome_da_sua_imagem:latest
 
-    - name: Run tests
-      run: |
-        docker run --rm my-image:latest python -m unittest discover tests/
+      - name: Run tests
+        run: |
+          docker run nome_da_sua_imagem python -m unittest discover
 
-  # Job de Deploy
   deploy:
+    needs: [build, test]
     runs-on: ubuntu-latest
-    needs: [test]
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        push: true # Habilita o push para o Docker Hub
-        tags: my-image:latest
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: nome_da_sua_imagem:latest
+          registry: docker.pkg.github.com
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Deploy to Ngrok
-      env:
-        NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }} # Define o token de autenticação do Ngrok como uma secret
-      run: |
-        curl https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip --output ngrok.zip
-        unzip ngrok.zip
-        ./ngrok authtoken $NGROK_AUTH_TOKEN
-        ./ngrok http 5000 # Redireciona o tráfego do Ngrok para a porta 5000
+      - name: Deploy Docker container
+        uses: appleboy/ssh-action@master
+        with:
+          host: your-server-hostname-or-ip
+          username: your-ssh-username
+          password: ${{ secrets.SSH_PASSWORD }}
+          port: your-ssh-port
+          script: |
+            docker stop nome_da_sua_imagem || true
+            docker rm nome_da_sua_imagem || true
+            docker pull docker.pkg.github.com/your-github-username/your-repository/nome_da_sua_imagem:latest
+            docker run -d -p 8000:8000 --name nome_da_sua_imagem docker.pkg.github.com/your-github-username/your-repository/nome_da_sua_imagem:latest
