--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,66 +1,56 @@
-name: Docker Build, Test, and Deploy
+steps:
+  - name: Checkout code
+    uses: actions/checkout@v2
 
-on:
-  push:
-    branches: [main]
+  - name: Login to Docker Hub
+    uses: docker/login-action@v1
+    with:
+      username: ${{ secrets.DOCKER_USERNAME }}
+      password: ${{ secrets.DOCKER_PASSWORD }}
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
+  - name: Build Docker image
+    uses: docker/build-push-action@v2
+    with:
+      context: .
+      push: false
+      tags: your-docker-username/your-docker-repo:latest
+steps:
+  - name: Checkout code
+    uses: actions/checkout@v2
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+  - name: Download Docker image
+    run: |
+      docker pull your-docker-username/your-docker-repo:latest
 
-      - name: Build Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: false
-          tags: nome_da_sua_imagem:latest
+  - name: Run tests
+    run: |
+      docker run your-docker-username/your-docker-repo python -m unittest discover
+steps:
+  - name: Checkout code
+    uses: actions/checkout@v2
 
-  test:
-    runs-on: ubuntu-latest
+  - name: Login to Docker Hub
+    uses: docker/login-action@v1
+    with:
+      username: ${{ secrets.DOCKER_USERNAME }}
+      password: ${{ secrets.DOCKER_PASSWORD }}
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+  - name: Build and push Docker image
+    uses: docker/build-push-action@v2
+    with:
+      context: .
+      push: true
+      tags: your-docker-username/your-docker-repo:latest
 
-      - name: Download Docker image
-        run: |
-          docker pull nome_da_sua_imagem:latest
-
-      - name: Run tests
-        run: |
-          docker run nome_da_sua_imagem python -m unittest discover
-
-  deploy:
-    needs: [build, test]
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: nome_da_sua_imagem:latest
-          registry: docker.pkg.github.com
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Deploy Docker container
-        uses: appleboy/ssh-action@master
-        with:
-          host: your-server-hostname-or-ip
-          username: your-ssh-username
-          password: ${{ secrets.SSH_PASSWORD }}
-          port: your-ssh-port
-          script: |
-            docker stop nome_da_sua_imagem || true
-            docker rm nome_da_sua_imagem || true
-            docker pull docker.pkg.github.com/your-github-username/your-repository/nome_da_sua_imagem:latest
-            docker run -d -p 8000:8000 --name nome_da_sua_imagem docker.pkg.github.com/your-github-username/your-repository/nome_da_sua_imagem:latest
+  - name: Deploy Docker container
+    uses: appleboy/ssh-action@master
+    with:
+      host: your-server-hostname-or-ip
+      username: your-ssh-username
+      password: ${{ secrets.SSH_PASSWORD }}
+      port: your-ssh-port
+      script: |
+        docker stop your-docker-container-name || true
+        docker rm your-docker-container-name || true
+        docker pull your-docker-username/your-docker-repo:latest
+        docker run -d -p 8000:8000 --name your-docker-container-name your-docker-username/your-docker-repo:latest
