--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,56 +1,46 @@
-steps:
-  - name: Checkout code
-    uses: actions/checkout@v2
+name: Pipeline para Build, Test e Deploy de Aplicação Web
 
-  - name: Login to Docker Hub
-    uses: docker/login-action@v1
-    with:
-      username: ${{ secrets.DOCKER_USERNAME }}
-      password: ${{ secrets.DOCKER_PASSWORD }}
+on:
+  push:
+    branches:
+      - main
 
-  - name: Build Docker image
-    uses: docker/build-push-action@v2
-    with:
-      context: .
-      push: false
-      tags: your-docker-username/your-docker-repo:latest
-steps:
-  - name: Checkout code
-    uses: actions/checkout@v2
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout do repositório
+        uses: actions/checkout@v2
 
-  - name: Download Docker image
-    run: |
-      docker pull your-docker-username/your-docker-repo:latest
+      - name: Login no Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{secrets.DOCKERHUB_USER}}
+          password: ${{secrets.DOCKERHUB_PWD}}
 
-  - name: Run tests
-    run: |
-      docker run your-docker-username/your-docker-repo python -m unittest discover
-steps:
-  - name: Checkout code
-    uses: actions/checkout@v2
+  test:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Run SAST Analysis via Semgrep
+        uses: returntocorp/semgrep-action@v1
+        with:
+          username: ${{secrets.DOCKERHUB_USER}}
+          password: ${{secrets.DOCKERHUB_PWD}}
+          # config: python.lang.security.yaml
 
-  - name: Login to Docker Hub
-    uses: docker/login-action@v1
-    with:
-      username: ${{ secrets.DOCKER_USERNAME }}
-      password: ${{ secrets.DOCKER_PASSWORD }}
+  deploy:
+    runs-on: ubuntu-latest
+    # needs: test-job
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-  - name: Build and push Docker image
-    uses: docker/build-push-action@v2
-    with:
-      context: .
-      push: true
-      tags: your-docker-username/your-docker-repo:latest
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{secrets.DOCKERHUB_USER}}
+          password: ${{secrets.DOCKERHUB_PWD}}
 
-  - name: Deploy Docker container
-    uses: appleboy/ssh-action@master
-    with:
-      host: your-server-hostname-or-ip
-      username: your-ssh-username
-      password: ${{ secrets.SSH_PASSWORD }}
-      port: your-ssh-port
-      script: |
-        docker stop your-docker-container-name || true
-        docker rm your-docker-container-name || true
-        docker pull your-docker-username/your-docker-repo:latest
-        docker run -d -p 8000:8000 --name your-docker-container-name your-docker-username/your-docker-repo:latest
+      - name: Expose Docker container
+        run: docker run -it -d -p 8081:80 imagem-nova:latest
