--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,7 +31,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    # needs: test-job
+    needs: test
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
