--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build da imagem Docker
-        run: docker build -t minha_imagem .
+        run: docker build -t imagem-minha:latest .
 
       - name: Login no Docker Hub
         uses: docker/login-action@v1
@@ -22,7 +22,7 @@ jobs:
           password: ${{secrets.DOCKERHUB_PWD}}
 
       - name: Push da imagem para o Docker Hub
-        run: docker push minha_imagem
+        run: docker push imagem-minha:latest
 
   deploy:
     runs-on: ubuntu-latest
@@ -35,7 +35,7 @@ jobs:
           password: ${{secrets.DOCKERHUB_PWD}}
 
       - name: Pull da imagem do Docker Hub
-        run: docker pull minha_imagem
+        run: docker pull imagem-minha:latest
 
       - name: Rodar container com a imagem
         run: docker run -d -p 5000:5000 minha_imagem
