--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,8 +21,8 @@ jobs:
           username: ${{secrets.DOCKERHUB_USER}}
           password: ${{secrets.DOCKERHUB_PWD}}
 
-      - name: Push da imagem para o Docker Hub
-        run: docker push imagem-minha:latest
+      - name: Pull da imagem para o Docker Hub
+        run: docker pull imagem-minha:latest
 
   deploy:
     runs-on: ubuntu-latest
@@ -35,7 +35,7 @@ jobs:
           password: ${{secrets.DOCKERHUB_PWD}}
 
       - name: Pull da imagem do Docker Hub
-        run: docker pull imagem-minha:latest
+        run: docker push imagem-minha:latest
 
       - name: Rodar container com a imagem
         run: docker run -d -p 5000:5000 minha_imagem
