--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,7 +35,11 @@ jobs:
           password: ${{secrets.DOCKERHUB_PWD}}
 
       - name: Pull da imagem do Docker Hub
-        run: docker push imagem-minha:latest
-
+        run: docker pull imagem-minha:latest
+      - name: Login no Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{secrets.DOCKERHUB_USER}}
+          password: ${{secrets.DOCKERHUB_PWD}}
       - name: Rodar container com a imagem
         run: docker run -d -p 5000:5000 minha_imagem
