--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,6 +33,7 @@ jobs:
         with:
           username: ${{secrets.DOCKERHUB_USER}}
           password: ${{secrets.DOCKERHUB_PWD}}
+           docker run -d -p 5000:5000 --name meuregistro registry:2
 
       - name: Pull da imagem do Docker Hub
         run: docker pull imagem-minha:latest
