--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -37,6 +37,8 @@ jobs:
 
       - name: Pull da imagem do Docker Hub
         run: docker pull imagem-minha:latest
+         docker run -d -p 5000:5000 --name meuregistro registry:2
+
       - name: Login no Docker Hub
         uses: docker/login-action@v1
         with:
