--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -46,16 +46,16 @@ jobs:
           password: ${{secrets.DOCKERHUB_PWD}}
           
       - name: Start do Docker Registry
-        run: docker run -d -p 5000:5000 --name meuregistro registry:2
+        run: docker run -d -p 5000:5000 --imagem-minha:latest meuregistro registry:2
 
       - name: Pull da imagem do Docker Hub
         run: docker pull imagem-minha:latest
 
       - name: Tag da imagem com o endereço do registro
-        run: docker tag imagem-minha:latest localhost:5000/minha_imagem
+        run: docker tag imagem-minha:latest localhost:5000/imagem-minha:latest
 
       - name: Push da imagem para o registro
-        run: docker push localhost:5000/minha_imagem
+        run: docker push localhost:5000/imagem-minha:latest
 
       - name: Rodar container com a imagem
-        run: docker run -d -p 8080:8080 localhost:5000/minha_imagem
+        run: docker run -d -p 8080:8080 localhost:5000/imagem-minha:latest
