--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,8 +21,8 @@ jobs:
           username: ${{secrets.DOCKERHUB_USER}}
           password: ${{secrets.DOCKERHUB_PWD}}
 
-      - name: Push da imagem para o Docker Hub
-        run: docker push imagem-minha:latest
+      - name: Pull da imagem para o Docker Hub
+        run: docker pull imagem-minha:latest
         
   test:
     needs: build
