--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,20 +35,14 @@ jobs:
           #config: python.lang.security.yaml
 
   deploy:
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - name: Login no Docker Hub
-        uses: docker/login-action@v1
-        with:
+     name: Log in to Docker Hub
+     uses: docker/login-action@v1
+          with:
           username: ${{secrets.DOCKERHUB_USER}}
           password: ${{secrets.DOCKERHUB_PWD}}
-          
-      - name: Start do Docker Registry
-        run: docker run -d -p 5000:5000 --name meu-registro registry:2
-         docker pull ubuntu
-      - name: Pull da imagem do Docker Hub
-        run: docker pull imagem-minha:latest
+
+        - name: Build Docker image
+          run: docker build -t eronbetine/pucpr:latest 
 
               
       - name: Push da imagem para o registro
