--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -44,7 +44,7 @@ jobs:
           password: ${{secrets.DOCKERHUB_PWD}}
 
       - name: Build Docker image
-        run: docker build -t santk/imagem-minha:latest .
+        run: docker build -t  ${{secrets.DOCKERHUB_USER}/imagem-minha:latest .
 
       - name: Push da imagem para o registro
         run: |
