--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,13 +15,6 @@ jobs:
       - name: Build da imagem Docker
         run: docker build -t imagem-minha:latest .
 
-      - name: Login no Docker Hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{secrets.DOCKERHUB_USER}}
-          password: ${{secrets.DOCKERHUB_PWD}}
-
-        
   test:
     needs: build
     runs-on: ubuntu-latest
@@ -43,13 +36,8 @@ jobs:
           username: ${{secrets.DOCKERHUB_USER}}
           password: ${{secrets.DOCKERHUB_PWD}}
 
-      - name: Build Docker image
-        run: docker build -t  ${{secrets.DOCKERHUB_USER}/imagem-minha:latest .
-
       - name: Push da imagem para o registro
-        run: |
-          docker tag imagem-minha:latest localhost:5000/imagem-minha:latest
-          docker push localhost:5000/imagem-minha:latest
+        run: docker push localhost:5000/imagem-minha:latest
 
       - name: Pull da imagem do registro
         run: docker pull localhost:5000/imagem-minha:latest 
