--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,19 +25,14 @@ jobs:
           username: ${{secrets.DOCKERHUB_USER}}
           password: ${{secrets.DOCKERHUB_PWD}}
           
-  test-job:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Install dependencies
-        run: pip install Flask
-      - uses: AppThreat/sast-scan-action@master
+      - name: Run SAST Scan via AppThreat
+        uses: AppThreat/sast-scan-action@master
         with:
           type: "python"
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: test
     steps:
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
