--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -43,4 +43,4 @@ jobs:
             
 
       - name: Rodar container com a imagem
-        run: docker run -d -p 5000:5000 localhost:5000/imagem-minha:latest
+        run: docker run -d -p 5000:5000 localhost:5000 imagem-minha:latest
